sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_empty_arrivallane/errors.duarouter
Error: Invalid arrivallane definition for vehicle '1'
Quitting (on error).
